--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "wpapi": "^1.2.1"
   },
   "devDependencies": {
     "@nuxtjs/dotenv": "^1.4.1"
