Feature add WooCommerce API plugin

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
+    "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
     "wpapi": "^1.2.1"
